--- a/melanoma_detection.ipynb
+++ b/melanoma_detection.ipynb
@@ -2440,7 +2440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retraining the model with batch normalization"
+    "## Retraining the model without batch normalization"
    ]
   },
   {
